# byteknight

./: .gitignore  BUILDME.md  CMakeLists.txt  README.md  run  todo.md
byteknight/: common.hpp  main.cpp
byteknight/assets/: asset_bases.cpp  asset_bases.hpp  gui_assets.cpp  gui_assets.hpp  object_assets.cpp  object_assets.hpp  scene_assets.cpp  scene_assets.hpp
byteknight/components/: component.cpp  component.hpp  move_set.cpp  move_set.hpp  object_group.cpp  object_group.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp  sprite.cpp  sprite.hpp
byteknight/context/: game_context.cpp  game_context.hpp  scene_context.cpp  scene_context.hpp
byteknight/datacore/: common_core.hpp  datacore.hpp  event_core.cpp  event_core.hpp  io_core.hpp  object_core.hpp  widget_core.hpp
byteknight/engine/: engine.cpp  engine.hpp  window.cpp  window.hpp
byteknight/events/: event_network.cpp  event_network.hpp  event_node.cpp  event_node.hpp
byteknight/factory/: asset_factory.cpp  asset_factory.hpp  resources.cpp  resources.hpp  rsrc_factory.cpp  rsrc_factory.hpp
byteknight/gui/: button.cpp  button.hpp  canvas.cpp  canvas.hpp  cursor.cpp  cursor.hpp  font.cpp  font.hpp  square_font.cpp  square_font.hpp  widget.cpp  widget.hpp
byteknight/io/: controller.cpp  controller.hpp  io_devices.cpp  io_devices.hpp
byteknight/layers/: backdrop_layer.cpp  backdrop_layer.hpp  layer_base.hpp  object_layer.cpp  object_layer.hpp  tile_layer.cpp  tile_layer.hpp
demo/: dtors.cpp  heap_memory.cpp  json_praccy.cpp  refs.cpp  test_math.cpp
res/: key_bindings.json  meta.cfg.json
(+90 files in other folders)
